--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "dependencies": {
     "aws-sdk": "^2.9.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^3.15.0"
+  },
   "scripts": {
+    "lint": "eslint index.js lib",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
