--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eslint": "^3.15.0"
   },
   "scripts": {
+    "start": "node index.js",
     "lint": "eslint index.js lib",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
