--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,12 +7,13 @@
     "rules": {
         "indent": [
             "error",
-            4
+            2
         ],
         "linebreak-style": [
             "error",
             "unix"
         ],
+        "no-console": ["off"],
         "quotes": [
             "error",
             "double"
