--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,22 +5,12 @@
     },
     "extends": "eslint:recommended",
     "rules": {
-        "indent": [
-            "error",
-            2
-        ],
-        "linebreak-style": [
-            "error",
-            "unix"
-        ],
-        "no-console": ["off"],
-        "quotes": [
-            "error",
-            "double"
-        ],
-        "semi": [
-            "error",
-            "always"
-        ]
+        "indent": [ "error", 2 ],
+        "linebreak-style": [ "error", "unix" ],
+        "no-console": [ "off" ],
+        "quotes": [ "error", "double" ],
+        "semi": [ "error", "always" ],
+        "eqeqeq": [ "error", "always" ],
+        "comma-dangle": [ "error", "never" ]
     }
 }
